# terraform-aws-acf-observability

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: acai-terraform-module.yml
cicd-principals/acai-provisio/: core_baselining_permissions.yaml.tftpl  main.tf  outputs.tf
cicd-principals/acai-vecto/: main.tf  oam_member.yaml.tftpl  oam_sink.tftpl  oam_sink.yaml.tftpl  outputs.tf
cicd-principals/terraform-oam-member/: main.tf  outputs.tf  variables.tf
cicd-principals/terraform-oam-sink/: main.tf  outputs.tf  variables.tf
examples/complete/: cicd_principals.tf  main.tf  outputs.tf  provider.tf  variables.tf
examples/member-worker/: main.tf  outputs.tf
modules-external/acai-powertools/lib/: pyproject.toml
modules-external/acai-powertools/lib/acai/: __init__.py  conftest.py
modules-external/acai-powertools/lib/acai/logging/: README.md  __init__.py  log_level.py
modules-external/acai-powertools/lib/acai/logging/adapters/: __init__.py
modules-external/acai-powertools/lib/acai/logging/adapters/outbound/: __init__.py  aws_lambda_pt_logger.py  cloudwatch_logger.py
modules-external/acai-powertools/lib/acai/logging/domain/: __init__.py  logger.py  logger_config.py
modules-external/acai-powertools/lib/acai/logging/ports/: __init__.py  logger_port.py
modules-external/terraform-aws-lambda/: README.md  main.tf  outputs.tf  variables.tf
modules/oam-member/: README.md  main.tf  outputs.tf  variables.tf
modules/oam-member-provisio/: main.tf  outputs.tf  variables.tf
modules/oam-member-terraform/: main.tf  outputs.tf  variables.tf
(+39 files in other folders)
