[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acai"
version = "0.1.0"
description = "Shared hexagonal-architecture library for AI pipelines"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["acai*"]
